# kuiper-rs

./: .gitignore  Cargo.toml  LICENSE-MIT
.github/: copilot-instructions.md
coordinator/: Cargo.toml
coordinator/src/: main.rs  reconciler.rs
docs/: .gitignore
examples/vmc-control-plane/: Cargo.toml
examples/vmc-control-plane/src/: admission.rs  builtin.rs  cleanup.rs  main.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: main.rs
kctl/: Cargo.toml
kctl/src/: cmd.rs  formatter.rs  main.rs
kr/: Cargo.toml
kr/src/: cmd.rs  formatter.rs  main.rs
kuiper-coordinator/: Cargo.toml
kuiper-coordinator/src/: main.rs  protocol.rs  reconciler.rs
kuiper-runtime/: Cargo.toml
kuiper-runtime-sdk/: Cargo.toml
kuiper-runtime-sdk/src/: client.rs  error.rs  lib.rs
kuiper-runtime-sdk/src/command/: mod.rs
kuiper-runtime-sdk/src/data/: file_system_store.rs  in_memory_store.rs  mod.rs
kuiper-runtime-sdk/src/model/: admission_policy.rs  mod.rs  resource.rs  resource_definition.rs  security.rs  service_endpoint.rs  tests.rs
kuiper-runtime/src/: config.rs  constants.rs  lib.rs  service.rs
kuiper-runtime/src/command/: admission.rs  commands.rs  delete.rs  echo.rs  get.rs  list.rs  mod.rs  reconcile.rs  set.rs  validate.rs  version.rs
kuiper-runtime/src/data/: document_db_store.rs  file_system_store.rs  mod.rs
kuiper-runtime/src/handlers/: admission.rs  delete.rs  echo.rs  get.rs  list.rs  mod.rs  reconcile.rs  set.rs  validate.rs  version.rs
kuiper-runtime/src/registry/: core.rs  mod.rs
kuiper-types/: Cargo.toml
kuiper-types/src/: error.rs  lib.rs
kuiper-types/src/model/: admission_policy.rs  mod.rs  resource.rs  resource_definition.rs  security.rs  service_endpoint.rs  tests.rs
resource-server/: Cargo.toml  build.rs
resource-server-api/: Cargo.toml
resource-server-client/: Cargo.toml
resource-server-client/src/: lib.rs
resource-server-runtime/: Cargo.toml  build.rs
resource-server-runtime/src/: lib.rs
resource-server-runtime/src/handlers/: admission.rs  delete.rs  echo.rs  get.rs  list.rs  mod.rs  reconcile.rs  set.rs  validate.rs  version.rs
resource-server-runtime/src/model/: admission_policy.rs  mod.rs  resource_definition.rs  service_endpoint.rs
resource-server-runtime/src/registry/: core.rs  mod.rs
resource-server-sdk/: Cargo.toml
resource-server-sdk/src/: client.rs  lib.rs  routes.rs
resource-server/src/: lib.rs  main.rs  routing.rs
resource-server/src/actors/: mod.rs  models.rs
resource-server/src/commands/: mod.rs  observer.rs
resource-server/src/logging/: mod.rs
resource-server/src/middleware/: catch_panic.rs  mod.rs
resource-server/src/services/: mod.rs  reconcile.rs
resource-server/tests/: api_test.rs
scripts/: api-client.ps1  create-vmc-resource.ps1  delete-vmc-resource.ps1  start-coordinator.ps1  start-resource-server.ps1  start-vmc.ps1  validate-reconciliation.ps1  validate-vmc.ps1
testing/: .gitignore  validate-kctl.ps1  validate-kr.ps1
testing/fixtures/definitions/: sensor.yaml  virtualmachine.yaml
testing/fixtures/resources/: admissionpolicy-vm-admission.yaml  sensor-humidity-01.yaml  sensor-temperature-01.yaml  serviceendpoint-admission-webhook.yaml  vm-db-server-01.yaml  vm-web-server-01.yaml
