[workspace]
resolver = "2"
members = [
    "kuiper-runtime-sdk",
    "kuiper-runtime",
    "kctl",
    "resource-server"
]

# NOTE: For FIPS Compliant tls
# https://www.memorysafety.org/blog/rustls-with-aws-crypto-back-end-and-fips/
# https://crates.io/crates/aws-lc-rs
# 

[workspace.dependencies]
kuiper-runtime-sdk = { path = "./kuiper-runtime-sdk" }
kuiper-runtime = { path = "./kuiper-runtime" }

# For Web Servers and Middleware
actix-web = "4"
actix-ws = "0.3"
actix-service = "2"
actix-http = "3"
actix-utils = "3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
jsonschema = "0.16"

# Async
tokio = { version = "1", features = ["signal", "process", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
async-trait = "0.1.88"

# Logging
thiserror = "2.0.12"
notify = "8.0.0"
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter","registry", "std", "fmt"] }
tracing-opentelemetry = "0.30.0"

# Logging / OTel
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-http = "0.29.0"
opentelemetry-stdout = { version = "0.29.0", features = ["trace", "logs"] }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-appender-tracing = "0.29.1"

# Common Libraries
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "json"] }
chrono = { version = "0.4.41", features = ["now", "serde"] }
anyhow = "1.0"
zip = "2.6.1"
sha2 = "0.10"   # Or `blake3 = "1.4"` for faster hashing
uuid = { version = "1.16.0", features = ["serde", "v4"] }
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
lazy_static = "1.4"
walkdir = "2"
dashmap = "6.1.0"