[workspace]
resolver = "2"
members = [
    "kuiper-types",
    "kuiper-runtime",
    "resource-server-runtime",
    "resource-server-sdk",
    "resource-server",
    "examples/vmc-control-plane",
    "integration-tests"
]

# NOTE: For FIPS Compliant tls
# https://www.memorysafety.org/blog/rustls-with-aws-crypto-back-end-and-fips/
# https://crates.io/crates/aws-lc-rs
# 

[workspace.dependencies]
kuiper-types = { path = "./kuiper-types" }
kuiper-runtime = { path = "./kuiper-runtime" }
resource-server-runtime = { path = "./resource-server-runtime" }
resource-server-sdk = { path = "./resource-server-sdk" }
resource-server = { path = "./resource-server" }

# For Web Servers and Middleware
actix-web = "4.13.0"
actix-ws = "0.4.0"
actix-service = "2.0.3"
actix-http = "3.12.0"
actix-utils = "3.0.1"
futures-util = "0.3.32"
pin-project-lite = "0.2.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
yaml_serde = "0.10.4"
jsonschema = "0.45.1"

# Async
tokio = { version = "1", features = ["signal", "process", "macros", "rt-multi-thread", "time", "sync"] }
tokio-util = "0.7"
async-trait = "0.1.89"

# Logging
thiserror = "2.0.18"
notify = "8.0.0"
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter","registry", "std", "fmt"] }
tracing-opentelemetry = "0.32.1"

# Logging / OTel
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"

# Transitive dependency pins
bytes = "1.11.1"
quinn-proto = "0.11.14"

# Common Libraries
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "json"] }
chrono = { version = "0.4.44", features = ["now", "serde"] }
anyhow = "1.0"
zip = "2.6.1"
sha2 = "0.10"   # Or `blake3 = "1.4"` for faster hashing
uuid = { version = "1.23.0", features = ["serde", "v4"] }
vergen = { version = "8.3.2", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
base64 = "0.22"
lazy_static = "1.5.0"
walkdir = "2"
dashmap = "6.1.0"
tokio-tungstenite = "0.26"
