[package]
name = "kuiper-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Travis Sharp <travis@kuipersys.com>"]

[[bin]]
name = "integration_tests"
path = "src/main.rs"

[dependencies]
kuiper-runtime.workspace = true
resource-server-runtime.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

thiserror.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Testing
colored = "2.1"
