[package]
name = "kctl"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
kuiper-runtime.workspace = true
kuiper-runtime-sdk.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

anyhow.workspace = true
uuid.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"