[package]
name = "kuiper-runtime-sdk"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true

thiserror.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
walkdir.workspace = true