[package]
name = "kuiper-runtime"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
kuiper-runtime-sdk.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true

thiserror.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true