[package]
name = "resource-server-client"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
resource-server-api.workspace = true
kuiper-types.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
