[package]
name = "resource-server-runtime"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
kuiper-types.workspace = true
kuiper-runtime.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true
base64.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
jsonschema = "0.45.1"

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true
