[package]
name = "resource-server"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Travis Sharp <travis@kuipersys.com>"]

[dependencies]
kuiper-runtime-sdk.workspace = true
kuiper-runtime.workspace = true

thiserror.workspace = true
anyhow.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-http.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-appender-tracing.workspace = true

actix-web.workspace = true
actix-ws.workspace = true
actix-service.workspace = true
actix-http.workspace = true
actix-utils.workspace = true
pin-project-lite.workspace = true
futures-util.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true